@@ -23,42 +23,45 @@
 
 namespace Rcpp {
 
-	Symbol::Symbol( SEXP x ) throw(not_compatible) : RObject() {
-		if( x != R_NilValue ){
-			int type = TYPEOF(x) ;
-			switch( type ){
-			case SYMSXP:
-				setSEXP( x ) ;
-				break; /* nothing to do */
-			case CHARSXP:
-				setSEXP( Rf_install(CHAR(x)) ) ;
-				break ;
-			case STRSXP:
-				{
-					/* FIXME: check that there is at least one element */
-					setSEXP( Rf_install( CHAR(STRING_ELT(x, 0 )) ) );
-					break ;
-				}
-			default:
-				throw not_compatible("cannot convert to symbol (SYMSXP)") ;
-			}
-		} 
-	}
+    Symbol::Symbol( SEXP x ) throw(not_compatible) : RObject() {
+	if( x != R_NilValue ){
+	    int type = TYPEOF(x) ;
+	    switch( type ){
+	    case SYMSXP:
+		setSEXP( x ) ;
+		break; /* nothing to do */
+	    case CHARSXP: {
+		SEXP charSym = Rf_install(CHAR(x)); 	// cannot be gc()'ed  once in symbol table
+		setSEXP( charSym ) ;
+		break ;
+	    }
+	    case STRSXP: {
+		/* FIXME: check that there is at least one element */
+		SEXP charSym = Rf_install( CHAR(STRING_ELT(x, 0 )) ); // cannot be gc()'ed  once in symbol table
+		setSEXP( charSym );
+		break ;
+	    }
+	    default:
+		throw not_compatible("cannot convert to symbol (SYMSXP)") ;
+	    }
+	} 
+    }
 	
-	Symbol::Symbol(const std::string& symbol): RObject(){
-		setSEXP( Rf_install(symbol.c_str()) );
-	}
+    Symbol::Symbol(const std::string& symbol): RObject(){
+	SEXP charSym = Rf_install(symbol.c_str()); 	// cannot be gc()'ed  once in symbol table
+	setSEXP( charSym );
+    }
 	
-	Symbol::Symbol( const Symbol& other) : RObject() {
-		setSEXP( other.asSexp() );
-	}
+    Symbol::Symbol( const Symbol& other) : RObject() {
+	setSEXP( other.asSexp() );
+    }
 	
-	Symbol& Symbol::operator=(const Symbol& other){
-		setSEXP( other.asSexp() );
-		return *this;
-	}
+    Symbol& Symbol::operator=(const Symbol& other){
+	setSEXP( other.asSexp() );
+	return *this;
+    }
 	
-	Symbol::~Symbol(){}
+    Symbol::~Symbol(){}
 	
 } // namespace Rcpp
 
