@@ -1,12 +1,16 @@
+2011-01-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/Symbol.cpp (Rcpp): Assign Rf_install() result to local SEXP
+
 2011-01-13  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/Reference.cpp: Protect the value being set in Reference::FieldProxy::set
 
 2011-01-11  Romain Francois <romain@r-enthusiasts.com>
 
-	* inst/include/Rcpp/vector/string_proxy.h: fix implicit conversion to int, 
+	* inst/include/Rcpp/vector/string_proxy.h: fix implicit conversion to int,
 	reported by Daniel Sabanes Bove on Rcpp-devel
-	
+
 	* inst/unitTests/runit.vector.R: unit test for the above fix
 
 2011-01-08  Dirk Eddelbuettel  <edd@debian.org>
